Add create and edit events