@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'seedu.eventmanager'
@@ -17,12 +18,21 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.postgresql:postgresql:42.7.13'
+
     testImplementation platform('org.junit:junit-bom:5.13.4')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 application {
     mainClass = 'seedu.eventmanager.Main'
+    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
+}
+
+javafx {
+    version = '25'
+    modules = ['javafx.controls']
 }
 
 tasks.named('test') {
